<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>


    <LinearLayout
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <com.logitrips.driver.util.CircleImageView
            android:id="@+id/account_pro_img"
            android:layout_width="95dp"

            android:src="@drawable/menu_account"
            android:layout_height="95dp"
            app:border_color="@android:color/transparent"
            app:border_width="0dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_name"
            android:textStyle="bold"

            android:textColor="@android:color/black"
            android:textSize="18sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/email_shrt"/>
            <TextView
                android:id="@+id/account_email"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
             />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/phone_cap"/>
            <TextView
                android:id="@+id/account_phone"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
               />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/status"/>
            <TextView
                android:id="@+id/account_status"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/approved"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/password_cap"/>
            <TextView
                android:id="@+id/account_change_password"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:text="@string/change_pass"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
               />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/location"/>
            <TextView
                android:id="@+id/account_location"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/sub_location"/>
            <TextView
                android:id="@+id/account_sub_loc"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/purpose"/>
            <TextView
                android:id="@+id/account_purpose"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/car_type"/>
            <TextView
                android:id="@+id/account_car_type"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/car_maker"/>
            <TextView
                android:id="@+id/account_maker"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/car_model"/>
            <TextView
                android:id="@+id/account_car_model"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/car_year"/>
            <TextView
                android:id="@+id/account_car_year"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/price_per_hour"/>
            <TextView
                android:id="@+id/account_price"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
    </LinearLayout>
</ScrollView>
