<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".LoginAc">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_blur" />
    <ImageView
        android:id="@+id/search_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:padding="30dp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/email"
            android:textColor="@color/half_opacity_white" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/oval_edit"

            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text="@string/password"
            android:textColor="@color/half_opacity_white" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"

        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:layout_height="40dp"
            android:layout_width="match_parent"

            android:background="@drawable/oval_edit"

            android:text="tamiraa"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="25dp"
            android:singleLine="true"
            android:textColor="@android:color/white" />
        <ImageView
            android:id="@+id/show_pass_btn"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/show_pass" />

    </RelativeLayout>

        <Button
            android:id="@+id/login_btn"

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"

            android:background="@drawable/oval_btn"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_pass_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"

            android:text="@string/forget_password"
            android:textColor="@color/half_opacity_white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/or_sign_in"
                android:textColor="@color/half_opacity_white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fb_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:src="@drawable/fb_login" />

            <ImageView
                android:id="@+id/plus_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:src="@drawable/plus_login" />
        </LinearLayout>

        <TextView
            android:id="@+id/create_acc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"

            android:text="@string/create_ac"
            android:textColor="@color/half_opacity_white" />
    </LinearLayout>

</RelativeLayout>
